--- a/dashboard-hystrix/src/main/resources/application.yml
+++ b/dashboard-hystrix/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8766
+management:
+  context-path: /admin
 spring:
   application:
     name: dashboard-hystrix
@@ -9,9 +11,9 @@ spring:
       host: localhost
       port: 8500
       discovery:
-#        healthCheckPath: ${management.contextPath}/health
+        healthCheckPath: "${management.context-path}/health"
         healthCheckInterval: 15s
-        instance-id: dashboard-hystrix
+        instance-id: ${spring.application.name}:${server.port}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
         prefer-ip-address: true
 
 endpoints:
